--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Divisor de Imágenes</title>
-    <link rel="stylesheet" href="../Estilos/styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <h1>Divisor de Imágenes</h1>
@@ -40,6 +40,6 @@
 
     <button onclick="splitImage()">Dividir</button>
 
-    <script src="../logica/aplicacion.js"></script>
+    <script src="./aplicacion.js"></script>
 </body>
 </html>
