--- a/preview.html
+++ b/preview.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vista previa</title>
-    <link rel="stylesheet" href="../Estilos/stylesprev.css">
+    <link rel="stylesheet" href="./stylesprev.css">
 </head>
 <body>
     <h1>Vista previa de los cortes</h1>
@@ -12,6 +12,6 @@
     <button id="download-selected">Descargar seleccionados</button>
     <button onclick="window.location.href='index.html'">Volver a recortar</button>
 
-    <script src="../logica/previsualizar.js"></script>
+    <script src="./previsualizar.js"></script>
 </body>
 </html>
