--- a/preview.html
+++ b/preview.html
@@ -9,9 +9,12 @@
 <body>
     <h1>Vista previa de los cortes</h1>
     <div id="preview-container"></div>
-    <button id="download-selected">Descargar seleccionados</button>
-    <button onclick="window.location.href='index.html'">Volver a recortar</button>
+    <button class="Descargar" id="download-selected">Descargar seleccionados</button>
+    <button class="imprimir" id="print-button">Imprimir</button>
+    <button class="retornar" onclick="window.location.href='index.html'">Volver a recortar</button>
 
     <script src="./previsualizar.js"></script>
+    <script src="./imprimir.js" defer></script>
+
 </body>
 </html>
